iac/k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-karafka
  namespace: rails-patterns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-karafka
  template:
    metadata:
      labels:
        app: consumer-karafka
    spec:
      containers:
        - name: karafka
          image: rails-patterns/consumer:latest
          command: ["bundle", "exec", "karafka", "server"]
